Many bug fixes, refactorings and unit tests